# rkv

./: Cargo.toml  README.md  example_cluster_config.toml  raft.md  todo.md
.github/: copilot-instructions.md
doc/: net.md  node_lifecycle.excalidraw  state.md  todo.md
src/: bootstrap.rs  config.rs  context.rs  main.rs
src/config/: config.rs  mod.rs
src/context/: context.rs
src/core/: api.rs  entries.rs  events.rs  log.rs  mod.rs  net.rs  replication.rs  rpc.rs  run.rs  state.rs  storage.rs  vote.rs
src/core/managers/: config.rs  lifecycle.rs  log.rs  mod.rs  replication.rs
src/tasks/: election_timer.rs  heartbeat_timer.rs  mod.rs  timer.rs
src/tasks/api_server/: handlers.rs  server.rs
src/tasks/rpc_server/: entries.rs  mod.rs  server.rs  vote.rs  voting.rs
