[package]
name = "rkv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["time", "sync", "rt-multi-thread", "macros", "net", "io-util"] }
toml = "0.8"
axum = "0.8"
bytes = "1"
percent-encoding = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crc32fast = "1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["test-util"] }
